--- a/web-home/build.gradle
+++ b/web-home/build.gradle
@@ -22,14 +22,14 @@ dependencies {
     }
 }
 
-
-gretty {
-    // overlay ':web-res'
-    httpPort = 8280
-    contextPath = "/"
-    servletContainer = 'jetty9'
-    // extraResourceBase '../web-assets/src/main/webapp'
-
-    debugPort = 5005
-    debugSuspend = false
-}
+//
+//gretty {
+//    // overlay ':web-res'
+//    httpPort = 8280
+//    contextPath = "/"
+//    servletContainer = 'jetty9'
+//    // extraResourceBase '../web-assets/src/main/webapp'
+//
+//    debugPort = 5005
+//    debugSuspend = false
+//}
