--- a/web-home/src/main/resources/jdbc.properties
+++ b/web-home/src/main/resources/jdbc.properties
@@ -1,9 +1,6 @@
 jdbc.driverClassName=com.mysql.jdbc.Driver
 jdbc.validationQuery=SELECT 1
+jdbc.maxActive=20
 jdbc.url=jdbc:mysql://localhost:3306?useUnicode=true&characterEncoding=utf8&zeroDateTimeBehavior=convertToNull&autoReconnect=true&failOverReadOnly=false&rewriteBatchedStatements=true
 jdbc.user=dev
 jdbc.password=123456
-
-# 通用Mapper配置
-mapper.plugin = tk.mybatis.mapper.generator.MapperPlugin
-mapper.Mapper = tk.mybatis.mapper.common.Mapper
