--- a/common/build.gradle
+++ b/common/build.gradle
@@ -6,5 +6,6 @@ apply plugin: 'maven'
 apply plugin: 'java'
 
 dependencies {
-
+    compile 'org.mybatis.generator:mybatis-generator-core:1.3.2'
+    compile 'tk.mybatis:mapper:3.3.8'
 }
