--- a/dev-tools/build.gradle
+++ b/dev-tools/build.gradle
@@ -14,9 +14,13 @@ configurations {
 
 dependencies {
     compile 'org.mybatis.generator:mybatis-generator-core:1.3.2'
+    compile 'tk.mybatis:mapper:3.3.8'
+    compile project(':common')
     mybatisGenerator 'org.mybatis.generator:mybatis-generator-core:1.3.2'
     mybatisGenerator 'mysql:mysql-connector-java:5.1.36'
     mybatisGenerator 'tk.mybatis:mapper:3.3.8'
+    mybatisGenerator 'org.slf4j:slf4j-api:1.7.5'
+    mybatisGenerator files('../lib/dev-tools-1.0.jar')
 }
 
 def getDbProperties = {
