--- a/mapper/build.gradle
+++ b/mapper/build.gradle
@@ -11,6 +11,7 @@ dependencies {
 
     compile 'org.mybatis:mybatis:3.3.1'
     compile 'org.mybatis:mybatis-spring:1.2.5'
-
     compile 'tk.mybatis:mapper:3.3.8'
+    compile 'com.github.pagehelper:pagehelper:4.1.6'
+
 }
